# libportal

./: .gitignore  CNAME  Makefile  NEWS  README.md  class.InputCapturePointerBarrier.html  class.InputCaptureSession.html  class.InputCaptureZone.html  class.Portal.html  class.Session.html  class.Settings.html  classes_hierarchy.html  const.WALLPAPER_TARGET_BOTH.html  ctor.Portal.initable_new.html  ctor.Portal.new.html  enum.ButtonState.html  enum.CameraFlags.html  enum.DiscreteAxis.html  enum.EmailFlags.html  enum.KeyState.html  enum.LocationAccuracy.html  enum.LocationMonitorFlags.html  enum.LoginSessionState.html  enum.NotificationFlags.html  enum.PersistMode.html  enum.PrintFlags.html  enum.SaveFileFlags.html  enum.SessionMonitorFlags.html  enum.SessionState.html  enum.SessionType.html  enum.UpdateInstallFlags.html  enum.UpdateMonitorFlags.html  enum.UpdateStatus.html  enum.UserInformationFlags.html  flags.BackgroundFlags.html  flags.CursorMode.html  flags.DeviceType.html  flags.InhibitFlags.html  flags.InputCapability.html  flags.LauncherType.html  (+154 more)
.github/workflows/: build.yml  flatpak.yml  pages.yml
build-aux/: build.sh  org.gnome.PortalTest.Gtk3.json  org.gnome.PortalTest.Gtk4.json  org.gnome.PortalTest.Qt.json  org.gnome.PortalTest.Qt5.json  org.gnome.PortalTest.Qt6.json  org.gnome.PortalTest.json
data/: org.freedesktop.portal.Screenshot.xml
doc/: libportal-sections.txt  libportal.md  libportal.toml.in  libportal.types  libportal.xml  meson.build  release-checklist.md
libportal/: TODO  account.c  account.h  background.c  background.h  camera.c  camera.h  clipboard.c  clipboard.h  docs.c  dynamic-launcher.c  dynamic-launcher.h  email.c  email.h  file.c  filechooser.c  filechooser.h  glib-backports.h  globalshortcuts.c  globalshortcuts.h  inhibit.c  inhibit.h  inputcapture-pointerbarrier.c  inputcapture-private.h  inputcapture-zone.c  inputcapture.c  inputcapture.h  location-private.h  location.c  location.h  meson.build  notification.c  notification.h  openuri.c  openuri.h  parent-private.h  parent.c  parent.h  portal-enums.c.template  portal-enums.h.template  (+35 more)
libportal-qt/: account.cpp  account.h  background.cpp  background.h  camera.cpp  camera.h  email.cpp  email.h  filechooser.cpp  filechooser.h  inhibit.cpp  inhibit.h  libportalqt_export.h  location.cpp  location.h  meson.build  notification.cpp  notification.h  openuri.cpp  openuri.h  parent.cpp  parent.h  parent_p.h  portal.cpp  portal.h  portal_p.h  print.cpp  print.h  response.cpp  response.h
libportal-qt/cmake/: LibPortalQtConfig.cmake.in
portal-test/: meson.build  org.gnome.PortalTest.desktop  org.gnome.PortalTest.service  portal-linking-test.c  portal-test-win.c  portal-test-win.ui
portal-test-qt/: main.cpp  meson.build  portal-test-qt.cpp  portal-test-qt.h  portal-test-qt.ui
portal-test/flatpak/: build.sh  org.gnome.PortalTest.json
portal-test/gtk3/: main.c  meson.build  org.gnome.PortalTest.Gtk3.desktop  org.gnome.PortalTest.Gtk3.service  portal-test-app.c  portal-test-app.h  portal-test-win.c  portal-test-win.ui  portal-test.gresource.xml
portal-test/gtk3/flatpak/: build.sh
portal-test/gtk4/: application.js  main.c  main.js  meson.build  org.gnome.PortalTest.Gtk4.data.gresource.xml  org.gnome.PortalTest.Gtk4.desktop  org.gnome.PortalTest.Gtk4.service  org.gnome.PortalTest.Gtk4.src.gresource.xml  portal-linking-test.c  portal-test-app.c  portal-test-gtk4.gresource.xml  portal-test-win.c  portal-test-win.h  portal-test-win.ui  test.txt  window.js  window.ui
portal-test/qt/: main.cpp  meson.build
portal-test/qt5/: main.cpp  meson.build  portal-test-qt.cpp  portal-test-qt.h  portal-test-qt.ui
portal-test/qt6/: main.cpp  meson.build  org.freedesktop.PortalTest.Qt6.desktop  portal-test-qt.cpp  portal-test-qt.h
tests/: gir-testenv.sh  meson.build
tests/pyportaltest/: __init__.py  test_inputcapture.py  test_notification.py  test_remotedesktop.py  test_screencast.py  test_wallpaper.py
tests/pyportaltest/templates/: __init__.py  inputcapture.py  notification.py  remotedesktop.py  screencast.py  wallpaper.py
tests/qt5/: meson.build  qttest.cpp  qttest.h  test.cpp  test.h
tests/qt6/: meson.build  test.cpp  test.h
